Fix yAxis overflow on barchart

--- a/client/src/app/charts/barchart/barchart.component.css
+++ b/client/src/app/charts/barchart/barchart.component.css
@@ -1,13 +1,17 @@
 .d3-chart {
-  width: 100%;
-  height: 400px;
+    width: 100%;
+    height: 400px;
 }
 
 .d3-chart .axis path,
 .d3-chart .axis line {
-  stroke: #999;
+    stroke: #999;
 }
 
 .d3-chart .axis text {
-  fill: #999;
+    fill: #999;
+}
+
+svg {
+    overflow: inherit;
 }
