--- a/client/src/app/home/vendor-line/vendor-line.component.css
+++ b/client/src/app/home/vendor-line/vendor-line.component.css
@@ -14,3 +14,15 @@ li:hover {
     -o-transition: background-color 0.2s linear;
     transition: background-color 0.2s linear;
 }
+
+.text {
+    margin:auto;
+}
+
+.mdl-list__item-icon {
+    margin: auto;
+}
+
+.mdl-list__item-secondary-content {
+    width: 10%;
+}
